@@ -1,0 +1,12 @@
+<h1>KISS OF LIFE強勢回歸！新迷你專輯《Lose Yourself》即將發行，先行曲將於10月4日搶先曝光</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/q_YfVUjjJrc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>韓國女團KISS OF LIFE即將推出新作品，繼夏季熱門單曲《Sticky》之後再次引起樂迷期待。該曲以非洲節奏的電子舞曲風格，令人難忘。</p>
+<p>S2娛樂宣布，該團將於10月15日發行第三張迷你專輯《Lose Yourself》。在專輯正式發行前，將於10月4日推出先行曲。</p>
+<p>該消息隨著專輯名稱《Lose Yourself》的預告圖片於團隊官方社交媒體平台上發布，圖片以閃耀、鮮豔的字體展示專輯名稱，已經引起了樂迷們的高度期待。</p>
+<p>KISS OF LIFE自2022年7月以首張迷你專輯《Kiss of Life》出道以來，已經在韓國流行音樂界產生了顯著的影響。憑藉出色的現場表演和充滿活力的能量，該團隊迅速建立了強大的舞台存在感。</p>
+<p>該團隊曾於今年的韓國大眾音樂獎中，以第二張迷你專輯《Born to Be XX》贏得年度新人獎，而最近的單曲《Sticky》則在國內音樂節目中獲得兩次冠軍，並在音樂榜單上排名第三。</p>
+<p>該團隊的名稱靈感來自人工呼吸的概念，象徵著為韓國流行音樂界注入新生命的使命。</p>
+
+<p>資料來源： Korea Herald</p>
