@@ -23,3 +23,4 @@ https://www.koreaherald.com/view.php?ud=20240927050458
 https://www.koreaherald.com/view.php?ud=20240926050668
 https://www.koreaherald.com/view.php?ud=20240926050629
 https://www.koreaherald.com/view.php?ud=20240925050626
+https://www.koreaherald.com/view.php?ud=20240925050621
